lib/common-music/sa/include/sa.h

EXPORT void _wrap_SndObj_SetVectorSize (SndObj *larg1, int larg2);
EXPORT float _wrap_SndObj_GetSr (SndObj *larg1);
EXPORT void _wrap_SndObj_SetSr (SndObj *larg1, float larg2);
EXPORT int _wrap_SndObj_Set (SndObj *larg1, char *larg2, float larg3);
EXPORT int _wrap_SndObj_Connect (SndObj *larg1, char *larg2, void *larg3);
EXPORT void _wrap_SndObj_SetInput (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_GetInput (SndObj *larg1);
EXPORT SndObj *_wrap_new_SndObj (SndObj *larg1, int larg2, float larg3);
EXPORT SndObj *_wrap_new_SndObj_empty ();
EXPORT void _wrap_delete_SndObj (SndObj *larg1);
EXPORT char *_wrap_SndObj_ErrorMessage (SndObj *larg1);
EXPORT void _wrap_SndIO_m_sampsize_set (SndIO *larg1, short larg2);
EXPORT short _wrap_SndIO_m_sampsize_get (SndIO *larg1);
EXPORT float _wrap_SndIO_GetSr (SndIO *larg1);
EXPORT int _wrap_SndIO_GetVectorSize (SndIO *larg1);
EXPORT short _wrap_SndIO_GetChannels (SndIO *larg1);
EXPORT short _wrap_SndIO_GetSize (SndIO *larg1);
EXPORT float _wrap_SndIO_Output (SndIO *larg1, int larg2, int larg3);
EXPORT short _wrap_SndIO_SetOutput (SndIO *larg1, short larg2, SndObj *larg3);
EXPORT SndIO *_wrap_new_SndIO (short larg1, short larg2, SndObj **larg3, int larg4, float larg5);
EXPORT void _wrap_delete_SndIO (SndIO *larg1);
EXPORT short _wrap_SndIO_Read (SndIO *larg1);
EXPORT short _wrap_SndIO_Write (SndIO *larg1);
EXPORT char *_wrap_SndIO_ErrorMessage (SndIO *larg1);
EXPORT int _wrap_SndIO_Error (SndIO *larg1);
EXPORT long _wrap_Table_GetLen (Table *larg1);
EXPORT float *_wrap_Table_GetTable (Table *larg1);
EXPORT float _wrap_Table_Lookup (Table *larg1, int larg2);
EXPORT void _wrap_delete_Table (Table *larg1);
EXPORT char *_wrap_Table_ErrorMessage (Table *larg1);
EXPORT short _wrap_Table_MakeTable (Table *larg1);
EXPORT void _wrap_Oscil_SetSr (Oscil *larg1, float larg2);
EXPORT void _wrap_Oscil_m_factor_set (Oscil *larg1, float larg2);
EXPORT float _wrap_Oscil_m_factor_get (Oscil *larg1);
EXPORT Oscil *_wrap_new_Oscil_empty ();
EXPORT Oscil *_wrap_new_Oscil (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Oscil (Oscil *larg1);
EXPORT short _wrap_Oscil_SetPhase (Oscil *larg1, float larg2);
EXPORT void _wrap_Oscil_SetTable (Oscil *larg1, Table *larg2);
EXPORT void _wrap_Oscil_SetFreq (Oscil *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Oscil_SetAmp (Oscil *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Oscil_SetFreqSndObj (Oscil *larg1, SndObj *larg2);
EXPORT void _wrap_Oscil_SetAmpSndObj (Oscil *larg1, SndObj *larg2);
EXPORT int _wrap_Oscil_Connect (Oscil *larg1, char *larg2, void *larg3);
EXPORT int _wrap_Oscil_Set (Oscil *larg1, char *larg2, float larg3);
EXPORT Oscilt *_wrap_new_Oscilt_empty ();
EXPORT Oscilt *_wrap_new_Oscilt (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Oscilt (Oscilt *larg1);
EXPORT Oscili *_wrap_new_Oscili_empty ();
EXPORT Oscili *_wrap_new_Oscili (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Oscili (Oscili *larg1);
EXPORT FastOsc *_wrap_new_FastOsc_empty ();
EXPORT FastOsc *_wrap_new_FastOsc (Table *larg1, float larg2, float larg3, int larg4, float larg5);
EXPORT void _wrap_delete_FastOsc (FastOsc *larg1);
EXPORT void _wrap_FastOsc_SetFreq (FastOsc *larg1, float larg2);
EXPORT void _wrap_FastOsc_SetAmp (FastOsc *larg1, float larg2);
EXPORT void _wrap_FastOsc_SetPhase (FastOsc *larg1, float larg2);
EXPORT void _wrap_FastOsc_SetTable (FastOsc *larg1, Table *larg2);
EXPORT int _wrap_FastOsc_Set (FastOsc *larg1, char *larg2, float larg3);
EXPORT int _wrap_FastOsc_Connect (FastOsc *larg1, char *larg2, void *larg3);
EXPORT void _wrap_FastOsc_SetSr (FastOsc *larg1, float larg2);
EXPORT Osc *_wrap_new_Osc_empty ();
EXPORT Osc *_wrap_new_Osc (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Osc (Osc *larg1);
EXPORT void _wrap_Osc_SetFreq (Osc *larg1, SndObj *larg2);
EXPORT void _wrap_Osc_SetAmp (Osc *larg1, SndObj *larg2);
EXPORT int _wrap_Osc_Connect (Osc *larg1, char *larg2, void *larg3);
EXPORT Osci *_wrap_new_Osci_empty ();
EXPORT Osci *_wrap_new_Osci (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Osci (Osci *larg1);
EXPORT void _wrap_Osci_SetTable (Osci *larg1, Table *larg2);
EXPORT int _wrap_Osci_Connect (Osci *larg1, char *larg2, void *larg3);
EXPORT SndIn *_wrap_new_SndIn_empty ();
EXPORT SndIn *_wrap_new_SndIn (SndIO *larg1, short larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SndIn (SndIn *larg1);
EXPORT void _wrap_SndIn_SetInput (SndIn *larg1, SndIO *larg2, short larg3);
EXPORT int _wrap_SndIn_Connect (SndIn *larg1, char *larg2, void *larg3);
EXPORT int _wrap_SndIn_Set (SndIn *larg1, char *larg2, float larg3);
EXPORT char *_wrap_SndIn_ErrorMessage (SndIn *larg1);
EXPORT SndObj *_wrap_SndRead_Outchannel (SndRead *larg1, int larg2);
EXPORT SndRead *_wrap_new_SndRead_empty ();
EXPORT SndRead *_wrap_new_SndRead (char *larg1, float larg2, float larg3, int larg4, float larg5);
EXPORT void _wrap_delete_SndRead (SndRead *larg1);
EXPORT void _wrap_SndRead_SetInput (SndRead *larg1, char *larg2);
EXPORT void _wrap_SndRead_SetScale (SndRead *larg1, float larg2);
EXPORT void _wrap_SndRead_SetPitch (SndRead *larg1, float larg2);
EXPORT int _wrap_SndRead_Set (SndRead *larg1, char *larg2, float larg3);
EXPORT ADSR *_wrap_new_ADSR_empty ();
EXPORT ADSR *_wrap_new_ADSR (float larg1, float larg2, float larg3, float larg4, float larg5, float larg6, SndObj *larg7, int larg8, float larg9);
EXPORT void _wrap_delete_ADSR (ADSR *larg1);
EXPORT void _wrap_ADSR_SetSr (ADSR *larg1, float larg2);
EXPORT void _wrap_ADSR_SetMaxAmp (ADSR *larg1, float larg2);
EXPORT void _wrap_ADSR_Sustain (ADSR *larg1);
EXPORT void _wrap_ADSR_Release (ADSR *larg1);
EXPORT void _wrap_ADSR_Restart (ADSR *larg1);
EXPORT void _wrap_ADSR_SetADSR (ADSR *larg1, float larg2, float larg3, float larg4, float larg5);
EXPORT void _wrap_ADSR_SetDur (ADSR *larg1, float larg2);
EXPORT int _wrap_ADSR_Set (ADSR *larg1, char *larg2, float larg3);
EXPORT IADSR *_wrap_new_IADSR_empty ();
EXPORT IADSR *_wrap_new_IADSR (float larg1, float larg2, float larg3, float larg4, float larg5, float larg6, float larg7, float larg8, SndObj *larg9, int larg10, float larg11);
EXPORT void _wrap_delete_IADSR (IADSR *larg1);
EXPORT void _wrap_IADSR_SetInit (IADSR *larg1, float larg2);
EXPORT void _wrap_IADSR_SetEnd (IADSR *larg1, float larg2);
EXPORT int _wrap_IADSR_Set (IADSR *larg1, char *larg2, float larg3);
EXPORT Buzz *_wrap_new_Buzz_empty ();
EXPORT Buzz *_wrap_new_Buzz (float larg1, float larg2, short larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Buzz (Buzz *larg1);
EXPORT void _wrap_Buzz_SetFreq (Buzz *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Buzz_SetAmp (Buzz *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Buzz_SetSr (Buzz *larg1, float larg2);
EXPORT void _wrap_Buzz_SetHarm (Buzz *larg1, int larg2);
EXPORT int _wrap_Buzz_Set (Buzz *larg1, char *larg2, float larg3);
EXPORT int _wrap_Buzz_Connect (Buzz *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_Buzz_ErrorMessage (Buzz *larg1);
EXPORT void _wrap_Balance_SetInput (Balance *larg1, SndObj *larg2, SndObj *larg3);
EXPORT void _wrap_Balance_SetLPFreq (Balance *larg1, float larg2);
EXPORT void _wrap_Balance_SetSr (Balance *larg1, float larg2);
EXPORT int _wrap_Balance_Set (Balance *larg1, char *larg2, float larg3);
EXPORT Balance *_wrap_new_Balance_empty ();
EXPORT Balance *_wrap_new_Balance (SndObj *larg1, SndObj *larg2, float larg3, int larg4, float larg5);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);