lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_SndObj_SetVectorSize" SndObj_SetVectorSize) :void
  (self :sndobj)
  (vecsize :int))

(defcfun ("_wrap_SndObj_GetSr" SndObj_GetSr) :float
  (self :sndobj))

(defcfun ("_wrap_SndObj_SetSr" SndObj_SetSr) :void
  (self :sndobj)
  (sr :float))

(defcfun ("_wrap_SndObj_Set" SndObj_Set) :int
  (self :sndobj)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SndObj_Connect" SndObj_Connect) :int
  (self :sndobj)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SndObj_SetInput" SndObj_SetInput) :void
  (self :sndobj)
  (input :sndobj))

(defcfun ("_wrap_SndObj_GetInput" SndObj_GetInput) :sndobj
  (self :sndobj))

(defcfun ("_wrap_new_SndObj" new_SndObj) :sndobj
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_SndObj_empty" new_SndObj_empty) :sndobj)

(defcfun ("_wrap_delete_SndObj" delete_SndObj) :void
  (self :sndobj))

(defcfun ("_wrap_SndObj_ErrorMessage" SndObj_ErrorMessage) :string
  (self :sndobj))

(defcstruct _24Bit
	(s :pointer))

(defcfun ("_wrap_SndIO_m_sampsize_set" SndIO_m_sampsize_set) :void
  (self :sndobj_sndio)
  (m_sampsize :short))

(defcfun ("_wrap_SndIO_m_sampsize_get" SndIO_m_sampsize_get) :short
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_GetSr" SndIO_GetSr) :float
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_GetVectorSize" SndIO_GetVectorSize) :int
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_GetChannels" SndIO_GetChannels) :short
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_GetSize" SndIO_GetSize) :short
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_Output" SndIO_Output) :float
  (self :sndobj_sndio)
  (pos :int)
  (channel :int))

(defcfun ("_wrap_SndIO_SetOutput" SndIO_SetOutput) :short
  (self :sndobj_sndio)
  (channel :short)
  (input :sndobj))

(defcfun ("_wrap_new_SndIO" new_SndIO) :sndobj_sndio
  (channels :short)
  (bits :short)
  (inputlist :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndIO" delete_SndIO) :void
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_Read" SndIO_Read) :short
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_Write" SndIO_Write) :short
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_ErrorMessage" SndIO_ErrorMessage) :string
  (self :sndobj_sndio))

(defcfun ("_wrap_SndIO_Error" SndIO_Error) :int
  (self :sndobj_sndio))

(defcfun ("_wrap_Table_GetLen" Table_GetLen) :long
  (self :sndobj_table))

(defcfun ("_wrap_Table_GetTable" Table_GetTable) :pointer
  (self :sndobj_table))

(defcfun ("_wrap_Table_Lookup" Table_Lookup) :float
  (self :sndobj_table)
  (pos :int))

(defcfun ("_wrap_delete_Table" delete_Table) :void
  (self :sndobj_table))

(defcfun ("_wrap_Table_ErrorMessage" Table_ErrorMessage) :string
  (self :sndobj_table))

(defcfun ("_wrap_Table_MakeTable" Table_MakeTable) :short
  (self :sndobj_table))

(defcfun ("_wrap_Oscil_SetSr" Oscil_SetSr) :void
  (self :sndobj_oscil)
  (sr :float))

(defcfun ("_wrap_Oscil_m_factor_set" Oscil_m_factor_set) :void
  (self :sndobj_oscil)
  (m_factor :float))

(defcfun ("_wrap_Oscil_m_factor_get" Oscil_m_factor_get) :float
  (self :sndobj_oscil))

(defcfun ("_wrap_new_Oscil_empty" new_Oscil_empty) :sndobj_oscil)

(defcfun ("_wrap_new_Oscil" new_Oscil) :sndobj_oscil
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfreq :sndobj)
  (inputamp :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Oscil" delete_Oscil) :void
  (self :sndobj_oscil))

(defcfun ("_wrap_Oscil_SetPhase" Oscil_SetPhase) :short
  (self :sndobj_oscil)
  (phase :float))

(defcfun ("_wrap_Oscil_SetTable" Oscil_SetTable) :void
  (self :sndobj_oscil)
  (table :sndobj_table))

(defcfun ("_wrap_Oscil_SetFreq" Oscil_SetFreq) :void
  (self :sndobj_oscil)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_Oscil_SetAmp" Oscil_SetAmp) :void
  (self :sndobj_oscil)
  (amp :float)
  (InAmpObj :sndobj))

(defcfun ("_wrap_Oscil_SetFreqSndObj" Oscil_SetFreqSndObj) :void
  (self :sndobj_oscil)
  (inputfr :sndobj))

(defcfun ("_wrap_Oscil_SetAmpSndObj" Oscil_SetAmpSndObj) :void
  (self :sndobj_oscil)
  (inputamp :sndobj))

(defcfun ("_wrap_Oscil_Connect" Oscil_Connect) :int
  (self :sndobj_oscil)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Oscil_Set" Oscil_Set) :int
  (self :sndobj_oscil)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Oscilt_empty" new_Oscilt_empty) :sndobj_oscilt)

(defcfun ("_wrap_new_Oscilt" new_Oscilt) :sndobj_oscilt
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfreq :sndobj)
  (inputamp :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Oscilt" delete_Oscilt) :void
  (self :sndobj_oscilt))

(defcfun ("_wrap_new_Oscili_empty" new_Oscili_empty) :sndobj_oscili)

(defcfun ("_wrap_new_Oscili" new_Oscili) :sndobj_oscili
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfreq :sndobj)
  (inputamp :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Oscili" delete_Oscili) :void
  (self :sndobj_oscili))

(defcfun ("_wrap_new_FastOsc_empty" new_FastOsc_empty) :sndobj_fastosc)

(defcfun ("_wrap_new_FastOsc" new_FastOsc) :sndobj_fastosc
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_FastOsc" delete_FastOsc) :void
  (self :sndobj_fastosc))

(defcfun ("_wrap_FastOsc_SetFreq" FastOsc_SetFreq) :void
  (self :sndobj_fastosc)
  (fr :float))

(defcfun ("_wrap_FastOsc_SetAmp" FastOsc_SetAmp) :void
  (self :sndobj_fastosc)
  (amp :float))

(defcfun ("_wrap_FastOsc_SetPhase" FastOsc_SetPhase) :void
  (self :sndobj_fastosc)
  (phase :float))

(defcfun ("_wrap_FastOsc_SetTable" FastOsc_SetTable) :void
  (self :sndobj_fastosc)
  (table :sndobj_table))

(defcfun ("_wrap_FastOsc_Set" FastOsc_Set) :int
  (self :sndobj_fastosc)
  (mess :string)
  (value :float))

(defcfun ("_wrap_FastOsc_Connect" FastOsc_Connect) :int
  (self :sndobj_fastosc)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_FastOsc_SetSr" FastOsc_SetSr) :void
  (self :sndobj_fastosc)
  (sr :float))

(defcfun ("_wrap_new_Osc_empty" new_Osc_empty) :sndobj_osc)

(defcfun ("_wrap_new_Osc" new_Osc) :sndobj_osc
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfr :sndobj)
  (inputamp :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Osc" delete_Osc) :void
  (self :sndobj_osc))

(defcfun ("_wrap_Osc_SetFreq" Osc_SetFreq) :void
  (self :sndobj_osc)
  (inputfr :sndobj))

(defcfun ("_wrap_Osc_SetAmp" Osc_SetAmp) :void
  (self :sndobj_osc)
  (inputamp :sndobj))

(defcfun ("_wrap_Osc_Connect" Osc_Connect) :int
  (self :sndobj_osc)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Osci_empty" new_Osci_empty) :sndobj_osci)

(defcfun ("_wrap_new_Osci" new_Osci) :sndobj_osci
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfr :sndobj)
  (inputamp :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Osci" delete_Osci) :void
  (self :sndobj_osci))

(defcfun ("_wrap_Osci_SetTable" Osci_SetTable) :void
  (self :sndobj_osci)
  (table :sndobj_table))

(defcfun ("_wrap_Osci_Connect" Osci_Connect) :int
  (self :sndobj_osci)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_SndIn_empty" new_SndIn_empty) :sndobj_sndin)

(defcfun ("_wrap_new_SndIn" new_SndIn) :sndobj_sndin
  (input :sndobj_sndio)
  (channel :short)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndIn" delete_SndIn) :void
  (self :sndobj_sndin))

(defcfun ("_wrap_SndIn_SetInput" SndIn_SetInput) :void
  (self :sndobj_sndin)
  (input :sndobj_sndio)
  (channel :short))

(defcfun ("_wrap_SndIn_Connect" SndIn_Connect) :int
  (self :sndobj_sndin)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SndIn_Set" SndIn_Set) :int
  (self :sndobj_sndin)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SndIn_ErrorMessage" SndIn_ErrorMessage) :string
  (self :sndobj_sndin))

(defcfun ("_wrap_SndRead_Outchannel" SndRead_Outchannel) :sndobj
  (self :sndobj_sndread)
  (channel :int))

(defcfun ("_wrap_new_SndRead_empty" new_SndRead_empty) :sndobj_sndread)

(defcfun ("_wrap_new_SndRead" new_SndRead) :sndobj_sndread
  (name :string)
  (pitch :float)
  (scale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndRead" delete_SndRead) :void
  (self :sndobj_sndread))

(defcfun ("_wrap_SndRead_SetInput" SndRead_SetInput) :void
  (self :sndobj_sndread)
  (name :string))

(defcfun ("_wrap_SndRead_SetScale" SndRead_SetScale) :void
  (self :sndobj_sndread)
  (scale :float))

(defcfun ("_wrap_SndRead_SetPitch" SndRead_SetPitch) :void
  (self :sndobj_sndread)
  (pitch :float))

(defcfun ("_wrap_SndRead_Set" SndRead_Set) :int
  (self :sndobj_sndread)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_ADSR_empty" new_ADSR_empty) :sndobj_adsr)

(defcfun ("_wrap_new_ADSR" new_ADSR) :sndobj_adsr
  (att :float)
  (maxamp :float)
  (dec :float)
  (sus :float)
  (rel :float)
  (dur :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_ADSR" delete_ADSR) :void
  (self :sndobj_adsr))

(defcfun ("_wrap_ADSR_SetSr" ADSR_SetSr) :void
  (self :sndobj_adsr)
  (sr :float))

(defcfun ("_wrap_ADSR_SetMaxAmp" ADSR_SetMaxAmp) :void
  (self :sndobj_adsr)
  (maxamp :float))

(defcfun ("_wrap_ADSR_Sustain" ADSR_Sustain) :void
  (self :sndobj_adsr))

(defcfun ("_wrap_ADSR_Release" ADSR_Release) :void
  (self :sndobj_adsr))

(defcfun ("_wrap_ADSR_Restart" ADSR_Restart) :void
  (self :sndobj_adsr))

(defcfun ("_wrap_ADSR_SetADSR" ADSR_SetADSR) :void
  (self :sndobj_adsr)
  (att :float)
  (dec :float)
  (sus :float)
  (rel :float))

(defcfun ("_wrap_ADSR_SetDur" ADSR_SetDur) :void
  (self :sndobj_adsr)
  (dur :float))

(defcfun ("_wrap_ADSR_Set" ADSR_Set) :int
  (self :sndobj_adsr)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_IADSR_empty" new_IADSR_empty) :sndobj_iadsr)

(defcfun ("_wrap_new_IADSR" new_IADSR) :sndobj_iadsr
  (init :float)
  (att :float)
  (maxamp :float)
  (dec :float)
  (sus :float)
  (rel :float)
  (end :float)
  (dur :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_IADSR" delete_IADSR) :void
  (self :sndobj_iadsr))

(defcfun ("_wrap_IADSR_SetInit" IADSR_SetInit) :void
  (self :sndobj_iadsr)
  (init :float))

(defcfun ("_wrap_IADSR_SetEnd" IADSR_SetEnd) :void
  (self :sndobj_iadsr)
  (end :float))

(defcfun ("_wrap_IADSR_Set" IADSR_Set) :int
  (self :sndobj_iadsr)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Buzz_empty" new_Buzz_empty) :sndobj_buzz)

(defcfun ("_wrap_new_Buzz" new_Buzz) :sndobj_buzz
  (fr :float)
  (amp :float)
  (harms :short)
  (InFrObj :sndobj)
  (InAmpObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Buzz" delete_Buzz) :void
  (self :sndobj_buzz))

(defcfun ("_wrap_Buzz_SetFreq" Buzz_SetFreq) :void
  (self :sndobj_buzz)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_Buzz_SetAmp" Buzz_SetAmp) :void
  (self :sndobj_buzz)
  (amp :float)
  (InAmpObj :sndobj))

(defcfun ("_wrap_Buzz_SetSr" Buzz_SetSr) :void
  (self :sndobj_buzz)
  (sr :float))

(defcfun ("_wrap_Buzz_SetHarm" Buzz_SetHarm) :void
  (self :sndobj_buzz)
  (harm :int))

(defcfun ("_wrap_Buzz_Set" Buzz_Set) :int
  (self :sndobj_buzz)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Buzz_Connect" Buzz_Connect) :int
  (self :sndobj_buzz)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Buzz_ErrorMessage" Buzz_ErrorMessage) :string
  (self :sndobj_buzz))

(defcfun ("_wrap_Balance_SetInput" Balance_SetInput) :void
  (self :sndobj_balance)
  (input1 :sndobj)
  (input2 :sndobj))

(defcfun ("_wrap_Balance_SetLPFreq" Balance_SetLPFreq) :void
  (self :sndobj_balance)
  (fr :float))

(defcfun ("_wrap_Balance_SetSr" Balance_SetSr) :void
  (self :sndobj_balance)
  (sr :float))

(defcfun ("_wrap_Balance_Set" Balance_Set) :int
  (self :sndobj_balance)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Balance_empty" new_Balance_empty) :sndobj_balance)

(defcfun ("_wrap_new_Balance" new_Balance) :sndobj_balance
  (input1 :sndobj)
  (input2 :sndobj)
  (fr :float)
  (vecsize :int)
  (sr :float))
